# certsync

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirement.txt  setup.py
.github/workflows/: codeql.yml  linter.yml
certsync/: entry.py
